gitops-repo/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app-prod
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
